fix logo spacing

--- a/navbar.css
+++ b/navbar.css
@@ -2,6 +2,11 @@
     display: flex;
     padding: 10px;
 }
+#nav-bar img {
+    width: 150px;
+    height: auto;
+    display: block;
+}
 #nav-links {
     padding-top: 50px;
     padding-left: 200px;
